# MafiaMP

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
code/: CMakeLists.txt
code/client/: CMakeLists.txt
code/client-worker/: CMakeLists.txt
code/client-worker/src/: application.cpp  application.h  main.cpp
code/client/src/: main.cpp
code/client/src/core/: application.cpp  application.h  application_module.cpp  application_module.h  dev_features.cpp  dev_features.h  local_player_events.cpp  local_player_events.h  luavm.cpp  luavm.h  scene_object_registry.cpp  scene_object_registry.h
code/client/src/core/builtins/: builtins.h  ui.cpp  ui.h
code/client/src/core/dev/: local_replicator.cpp  local_replicator.h
code/client/src/core/hooks/: actors_slot_wrapper.cpp  application.cpp  camera.cpp  character_controller.cpp  fast_load.cpp  game_director.cpp  game_stats.cpp  hud.cpp  human.cpp  loading_screen.cpp  mod_init.cpp  navigation.cpp  player.cpp  render_device.cpp  resource_list.cpp  scene_object_manager.cpp  slot_wrapper.cpp  stream_map.cpp  tables.cpp  traffic.cpp  translocator.cpp  vehicle.cpp  vfs.cpp  vfs.h  weapon_controller.cpp
code/client/src/core/modules/: human.cpp  human.h  human.hpp  vehicle.cpp  vehicle.h  vehicle.hpp
code/client/src/core/states/: game_ready.cpp  game_ready.h  game_setup.cpp  game_setup.h  initialize.cpp  initialize.h  main_menu.cpp  main_menu.h  menu.cpp  menu.h  session_connected.cpp  session_connected.h  session_connection.cpp  session_connection.h  session_disconnection.cpp  session_disconnection.h  session_offline_debug.cpp  session_offline_debug.h  shutdown.cpp  shutdown.h  states.h
code/client/src/core/ui/: audio_debug.cpp  audio_debug.h  camera_studio.cpp  camera_studio.h  chat.cpp  chat.h  console.cpp  console.h  entity_browser.cpp  entity_browser.h  network_stats.cpp  network_stats.h  player_debug.cpp  player_debug.h  ui_base.cpp  ui_base.h  vehicle_debug.cpp  vehicle_debug.h  web.cpp  web.h  world_debug.cpp  world_debug.h
code/client/src/game/: module.cpp  module.h
code/client/src/game/entities/: factory.cpp  factory.h
code/client/src/game/helpers/: camera.cpp  camera.h  controls.cpp  controls.h  districts.h  game_input.cpp  game_input.h  human.cpp  human.h  ui.cpp  ui.h
code/client/src/game/hooks/: application.cpp  loading_screen.cpp  mod_init.cpp
code/client/src/game/overrides/: character_controller.cpp  character_controller.h  scoped_entity_type_faker.h
code/client/src/game/streaming/: entity_factory.cpp  entity_factory.h  entity_tracking_info.h  entity_type_factory.cpp  entity_type_factory.h
code/client/src/modules/: human.hpp
code/client/src/sdk/: c_car_tuning_manager.cpp  c_car_tuning_manager.h  c_command_line.cpp  c_command_line.h  c_contact_speed_change.h  c_corpse_emitter.h  c_entity_factory.cpp  c_entity_factory.h  c_entity_message.h  c_entity_message_damage.h  c_game.cpp  c_game.h  c_game_audio_module.cpp  c_game_audio_module.h  c_game_gfx_env_eff_module.h  c_game_input_module.cpp  c_game_input_module.h  c_game_rendering_system_module.cpp  c_game_rendering_system_module.h  c_game_time.h  c_game_traffic_module.cpp  c_game_traffic_module.h  c_gui_controller.h  c_human_emitter.h  c_ie.cpp  c_ie.h  c_inventory.h  c_inventory_item.h  c_inventory_wrapper.cpp  c_inventory_wrapper.h  c_mafia_camera_module.cpp  c_mafia_camera_module.h  c_melee_emitter.h  c_player_model_manager.cpp  c_player_model_manager.h  c_player_spawner.h  c_player_teleport_module.cpp  c_player_teleport_module.h  c_script_data_storage.h  c_sds_load_unload_notify.h  (+20 more)
code/client/src/sdk/entities/: c_actor.h  c_actor_deform.h  c_actor_vehicle.h  c_car.cpp  c_car.h  c_car_tuning_manager.cpp  c_crash_obj.h  c_door.cpp  c_door.h  c_entity.cpp  c_entity.h  c_entity_list.cpp  c_entity_list.h  c_entity_ownership_human_car.h  c_entity_pos.h  c_human2.cpp  c_human_2.h  c_player_2.cpp  c_player_2.h  c_tree.h  c_vehicle.cpp  c_vehicle.h  e_actor_actions.h
code/client/src/sdk/inventory/: c_inventory_wrapper.cpp
code/client/src/sdk/prefab/: c_prefab_init_data.h  c_prefab_manager.cpp  c_prefab_manager.h
code/client/src/sdk/script/: weapon.h
code/client/src/sdk/ue/: c_application.h  c_application_win32.h  c_base_object.h  c_cnt_ptr.h  c_fsm_event.h  c_game_fsm.h  c_game_fsm_state.h  c_game_init_state.h  c_mafia_game_up_context.h  c_mutex.h  c_owning_ptr.h  c_ptr.h  c_ref_ptr.h  c_second_order_filter.h  c_states_register.h  c_string.cpp  c_string.h  c_time_budget.h  c_variant.h  c_weak_ptr.h  i_engine.h
code/client/src/sdk/wrappers/: c_human_2_car_wrapper.cpp  c_human_2_car_wrapper.h
code/launcher/: CMakeLists.txt  SectionLayout.txt
code/launcher/src/: main.cpp  tls.cpp  win32_cfg.cpp
code/server/: CMakeLists.txt
code/server/src/: main.cpp
code/server/src/core/: server.cpp  server.h
code/server/src/core/builtins/: builtins.h  chat.h  entity.cpp  entity.h  entity_collection.h  events_reserved.h  human.cpp  human.h  player.cpp  player.h  vehicle.cpp  vehicle.h  world.h
code/server/src/core/modules/: environment.cpp  environment.h  human.cpp  (+5 more)
code/shared/: constants.h  version.cpp.in  version.h
code/shared/entities/: human_entity.h  register_entities.cpp  register_entities.h  vehicle_entity.h
code/shared/game_rpc/: add_weapon.h  set_vehicledata.h  tune_radio.h
code/shared/game_rpc/human/: human_add_weapon.h  human_changeskin.h  human_death.h  human_reload.h  human_setprops.h  human_shoot.h
code/shared/game_rpc/vehicle/: vehicle_player_enter.h  vehicle_player_leave.h  vehicle_setprops.h
code/shared/messages/: messages.h
code/shared/messages/human/: human_client_update.h  human_despawn.h  human_self_update.h  human_spawn.h  human_update.h
code/shared/messages/misc/: chat_message.h
code/shared/messages/vehicle/: vehicle_despawn.h  vehicle_owner_update.h  vehicle_spawn.h  vehicle_update.h
code/shared/modules/: human_sync.hpp  mod.hpp  vehicle_sync.hpp
code/shared/rpc/: chat_message.h  environment.h  gui_actions.h  ids.h  spawn_car.h
code/worker/: CMakeLists.txt
code/worker/src/: main.cpp
(+368 files in other folders)
